    function name. (thanks to Nikodemus Siivola)
  * fixed bug: compile-time format string checker failed on
    non-closed ~{.  (reported by Thomas F Burdick)
  * fixed bug: as reported by Kalle Olavi Niemitalo on #lisp IRC,
    don't warn on legal loop code involving more than one aggregate
    boolean.  (thanks to Nikodemus Siivola)
  * optimization: rearranged the expansion of various defining macros
    so that each expands into only one top-level form in a
    :LOAD-TOPLEVEL context; this appears to decrease fasl sizes by
    approximately 10%.
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** FILE-POSITION works as specified on BROADCAST-STREAMs.
    ** CAST optimizer forgot to flush argument derived type.
    ** print/read consistency on floats is now orders of magnitude
       more likely.  (thanks also to Bruno Haible for a similar report
       and discussions)
    ** removed stack cleaning in the cleanup part of UNWIND-PROTECT.
    ** IMAGPART is specified (infelicitously) to return (* 0 <thing>)
       for objects of type REAL.  Make it so.
    ** SXHASH is specified (infelicitously) to respect similarity,
       which means that (SXHASH 0.0) must equal (SXHASH -0.0).  Make
       it so.  (thanks to Markus Ziegler)
    ** on the Alpha, the compiler succeeds in compiling functions
       returning a known number of arguments greater than 63.


planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))